Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6533

Missing include in wirecheck

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      wirecheck.c won't build on some platforms due to a missing include.

      make: Entering directory `/mnt/build/lustre-release/lustre/utils'
      gcc -DHAVE_CONFIG_H -I. -I../.. -DCC="\"gcc\"" -include /mnt/build/lustre-release/config.h -I/mnt/build/lustre-release/libcfs/include -I/mnt/build/lustre-release/lnet/include -I/mnt/build/lustre-release/lustre/include -g -Wall -fPIC -D_GNU_SOURCE -g -O2 -Werror -MT wirecheck-wirecheck.o -MD -MP -MF .deps/wirecheck-wirecheck.Tpo -c -o wirecheck-wirecheck.o `test -f 'wirecheck.c' || echo './'`wirecheck.c
      cc1: warnings being treated as errors
      wirecheck.c: In function 'system_string':
      wirecheck.c:2168: error: implicit declaration of function 'pipe'
      wirecheck.c:2172: error: implicit declaration of function 'fork'
      wirecheck.c:2177: error: implicit declaration of function 'dup2'
      wirecheck.c:2191: error: implicit declaration of function 'close'
      make: *** [wirecheck-wirecheck.o] Error 1

            utopiabound Nathaniel Clark
            hdoreau Henri Doreau (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: