LU-6533 utils: Include unistd.h in wirecheck

Include unistd.h which is needed due to the use of
pipe, fork, dup2 and close.

Remove libcfs.h that became unneeded.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Change-Id: I123e0051b6988445e2e56c17ad582ece6758e3a2
Reviewed-on: http://review.whamcloud.com/14626
Tested-by: Jenkins
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>